# mintload

./: CMakeLists.txt  README.md
cmake/: mintloadConfig.cmake.in
examples/: main.c  main.cpp
include/mintload/: base.h  manim.h  mintload.h  mintload.hpp  mmat.h  mmesh.h  mprop.h  mskel.h
src/: manim.c  mmap.c  mmat.c  mmesh.c  mprop.c  mskel.c  utils.h
tests/: test_mintload.c  test_mmat.c  test_mmat.h  test_mmesh.c  test_mmesh.h  test_utils.c  test_utils.h
